
<resources>
    <string name="titleMaps">MapsActivity</string>
    <string name="emptyData">Data not found!</string>
    <string name="mapsTitle">Location</string>
    <string name="mapsApi">AIzaSyCX2JXDNIgb6F6dwDGI9zya6eQDD6wDmhY</string>
    <string name="app_name">Story</string>
    <string name="appStart">Lets make ur Story!</string>
    <string name="start">Start Now!</string>
    <string name="errorEmail">Invalid Email Address</string>
    <string name="hintEmail">Email Address</string>
    <string name="requiredEmail">Email Address is Mandatory!</string>
    <string name="notExample">Emails with the @example.com domain are not permitted!</string>
    <string name="login">Log In</string>
    <string name="hintPassword">Password</string>
    <string name="errorPassword">Password must be a minimum of 8 characters!</string>
    <string name="notHaveAccount">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="descLogin">Welcome Back!</string>
    <string name="titleLogin">Login</string>
    <string name="titleSplash">Story</string>
    <string name="registerTitle">Sign Up</string>
    <string name="descRegister">Need an account? Register now</string>
    <string name="hintUser">Username</string>
    <string name="errorUser">Name should be more than 4 characters long!</string>
    <string name="strBtnRegister">Sign Up</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="strLogin">Log In</string>
    <string name="camera">Camera</string>
    <string name="setting">Settings</string>
    <string name="imagePhoto">Photo</string>
    <string name="titleDesc">Story Description</string>
    <string name="emptyStory">Oops, couldnt find the data youre looking for...</string>
    <string name="lostConnection">Sorry, please check your connection...</string>
    <string name="tryAgain">Try Again!</string>
    <string name="titleDetail">Story Details</string>
    <string name="changeLang">Switch Language</string>
    <string name="greeting">Hi,</string>
    <string name="addPhoto">Add a Photo</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="btnRetry">Retry</string>
    <string name="todo">To-Do</string>
    <string name="emptyUpload">Oops, failed to upload the image!</string>
    <string name="noCamera">Oh no, couldnt open the camera</string>
    <string name="takePicture">Please try to take a picture again!</string>
    <string name="nameUser">User</string>
    <string name="emailUser">testing@gmail.com</string>
    <string name="uploadStory">Submit Story</string>
    <string name="failedLogin">Login unsuccessful</string>
    <string name="succesLogin">Success!</string>
    <string name="nextStep">Next</string>
    <string name="registSucces">Account registration for %1$s was successful! Please log in and start telling stories!</string>
    <string name="descEmpty">Your description is empty!</string>
    <string name="emptyImages">Please upload image files first!</string>
    <string name="grantedPermission">Permission granted</string>
    <string name="deniedPermission">Permission denied</string>
    <string name="logOut">Log Out</string>
    <string name="makeSure">Are you sure?</string>
    <string name="yesLogout">Yes</string>
    <string name="noLogout">No</string>
    <string name="warningLogout">You have logged out</string>
    <string name="noSure">You remain in the app</string>
    <string name="warningRegister">Email and Password must be entered</string>
    <string name="noCameraApp">No camera app available</string>
    <string name="errorCreatingFile">Error while creating file</string>
    <string name="errorRegister">Registration failed</string>
</resources>



